--- a/article.html
+++ b/article.html
@@ -196,7 +196,7 @@
 			var target = $(this).attr("href");
 			
 			if( target.length ) {
-				//event.preventDefault();
+				event.preventDefault();
 				
 				$('html, body').animate({
 					scrollTop: $(target).offset().top
