--- a/article-video.html
+++ b/article-video.html
@@ -76,7 +76,7 @@
 		<section class="main-section"> <!-- content goes here -->			
 			<div class="row collapse">			
 				<div id="cover" class="large-12 columns placeholder-container media">			
-					<span class="blurbg" style="background-image:url(https://i.ytimg.com/vi/BYi8M96zyLI/hqdefault.jpg)">
+					<span class="blurbg blur" style="background-image:url(https://i.ytimg.com/vi/BYi8M96zyLI/hqdefault.jpg)">
 					</span>
 					
 					<div class="row">
