--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,14 @@
 </head>
 <body class="archive category">
 
-<div id="header">
+<div id="header" class="show-for-small-only small-only-text-center">	
+	<h1 class="archive-title h3">Blog</h1>
+</div>
+
+
+
+		
+<div class="off-canvas-wrap" data-offcanvas> 
 	<nav class="sidenav left-sidenav">
 		<a class="left-off-canvas-toggle menu-icon">
 			<div id="leftmenuIcon" class="icon-container">
@@ -39,42 +46,32 @@
 		</a> 
 	</nav>
 	
-	<h1 class="archive-title h3 show-for-small-only small-only-text-center">Blog</h1>
-</div>
-
-<div class="off-canvas-wrap off-canvas-menu" data-offcanvas>
 	<div class="inner-wrap"> 
-		<aside class="left-off-canvas-menu vertical-center"> 
-			<ul class="off-canvas-list">
-				<li><a href="#">Reklám</a></li> 
-				<li><a href="#">Portré</a></li> 
-				<li><a href="#">Glamour</a></li> 
-				<li><a href="#">Művészi Akt</a></li> 
-				<li><a href="blog.html">Blog</a></li> 
-			</ul> 
-		</aside>
+	
+			<aside class="left-off-canvas-menu vertical-center"> 
+				<ul class="off-canvas-list">
+					<li><a href="#">Reklám</a></li> 
+					<li><a href="#">Portré</a></li> 
+					<li><a href="#">Glamour</a></li> 
+					<li><a href="#">Művészi Akt</a></li> 
+					<li><a href="blog.html">Blog</a></li> 
+				</ul> 
+			</aside>
 
-		<aside class="right-off-canvas-menu"> 
-			<ul class="off-canvas-list"> 
-				<li><label>Users</label></li> 
-				<li><a href="#">Hari Seldon</a></li> 
-				<li><a href="#">...</a></li> 
-			</ul> 
-		</aside>
-		
-		<a class="exit-off-canvas"></a> 
-	</div>
-</div>    
-
-		
-<div class="off-canvas-wrap" data-offcanvas> 
-	<div class="inner-wrap"> 
+			<aside class="right-off-canvas-menu"> 
+				<ul class="off-canvas-list"> 
+					<li><label>Users</label></li> 
+					<li><a href="#">Hari Seldon</a></li> 
+					<li><a href="#">...</a></li> 
+				</ul> 
+			</aside>
+	
 		<section class="main-section"> <!-- content goes here -->
 			
 			<div id="content">
 				<h1 class="archive-title h3 hide-for-small small-only-text-center">Blog</h1>
 
-				<div class="row collapse owl-carousel">			
+				<div class="row collapse" id="onepagescroll">			
 					<figure itemtype="http://schema.org/BlogPosting" itemscope="" data-id="" class="post large-4 medium-6 small-12 columns effect-lily box ratio3_2">
 						<div class="content">
 							<span class="placeholder" style="background-image:url(http://placekitten.com/600/1200)">
@@ -175,16 +172,17 @@
 			</div>
 		</section> 
 		
-		
+		<a class="exit-off-canvas"></a> 
 	</div> 
 </div>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="js/vendor/jquery.onepage-scroll.min.js"></script>
 	<!--
 	<script async src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.3.1/js/foundation.min.js"></script>
 	<script async src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 	-->
-	<script async src="js/vendor/scripts.js"></script>	
+	<script async src="js/vendor/scripts.min.js"></script>	
 	
   </body>
 </html>
