--- a/article.html
+++ b/article.html
@@ -52,7 +52,7 @@
 		</aside>
 		
 		<section class="main-section"> <!-- content goes here -->			
-			<div class="header"></div>
+			<div class="header hide-for-medium-up"></div>
 			
 			<div class="row collapse">			
 				<div id="cover" class="large-12 columns placeholder-container media">
@@ -80,8 +80,7 @@
 					-->
 				</div>
 
-				<div id="content" class="large-12 medium-12 small-12 columns columns post-content">					
-					
+				<div id="content" class="large-12 medium-12 small-12 columns columns post-content">
 					<div itemprop="articleBody" class="entry-content row">
 						<div class="large-4 medium-6 small-12 large-centered medium-centered columns">
 							<h2>Lorem ipsum dolor sit amet</h2>
@@ -111,7 +110,7 @@
 							<p>Integer vehicula lorem lorem, et mattis mi faucibus eu. Vivamus consequat quam ac laoreet dapibus. Aliquam enim nibh, semper in sem eu, molestie facilisis nunc. Curabitur ut lacinia metus, quis pulvinar nulla. Duis gravida elit vel suscipit porta. Morbi laoreet ac arcu nec scelerisque. Curabitur a molestie quam. Duis sodales nibh mi, eu varius nunc sagittis quis. In convallis suscipit sagittis. Morbi mauris dolor, suscipit vehicula vehicula vitae, cursus at felis. Vivamus a metus iaculis, faucibus ipsum at, feugiat sem. Vestibulum eros enim, sodales vitae adipiscing in, aliquet et dolor. Aenean sollicitudin arcu sit amet lectus posuere tincidunt. Nullam ultricies elementum elit vitae suscipit.</p>
 						</div>
 					</div>
-				</div>				
+				</div>
 			</div>
 		</section> 
 		
