--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
 	<title>Foundation | Welcome</title>
 	
+	<script src="js/vendor/modernizr.js"></script>
+	<!--
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
+	-->
 	<link rel="stylesheet" href="css/style.css" />
 	
 	<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
@@ -27,6 +30,8 @@
 	<!--
 	<link rel="shortcut icon" href="favicon.ico">
 	-->
+	
+	
 </head>
 <body class="frontpage">
 
