css class changes for WP compatibility

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	
 	
 </head>
-<body class="frontpage">
+<body class="home">
 
 <div class="row collapse">
 	<div class="large-6 medium-6 small-6 columns placeholder-container">
