--- a/blog.html
+++ b/blog.html
@@ -167,7 +167,7 @@
 </div>
 
 	
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	
 	<script defer src="js/vendor/jquery.onepage-scrollby.min.js"></script>
 	<script src="js/vendor/dynamicpage.min.js"></script>	
