--- a/cv.html
+++ b/cv.html
@@ -85,6 +85,14 @@
 									<div class="large-12 columns">
 										<h1 class="headline uppercase white">Fábián Gábor</h1>
 										<h2 class="subtitle h4 uppercase white">web designer / webprogramozó</h2>
+										<div class="row">
+											<div class="large-6 columns text-right">
+												<p class="white">06 70 407 5555</p>
+											</div>
+											<div class="large-6 columns text-left">
+												<p><a class="white" href="mailto:info@fabiangabor.com">info@fabiangabor.com</a></p>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
